--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,5 +1,5 @@
 <div id='splash_screen'>
-  <h1>Mèxico Transfer</h1>
+  <h1>México Transfer</h1>
 
   <%= link_to 'Log In', new_user_session_path, class: 'login'%>
   <%= link_to 'Sign Up', new_user_registration_path, class: 'signup' %>
